Don't show CSS pseudo-classes/elements in autocompletion for the class attribute.

BUG: 119373